[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Comandos.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/chicken.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Textures/frame.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/retry.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/run.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/0aa3d267951bd82a79beb26b066c8081.jpg" type="Texture" id=10]
[ext_resource path="res://Assets/menu_panel.jpeg" type="Texture" id=11]
[ext_resource path="res://Assets/Slowdex.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Scenes/audio.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Level1.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Level.gd" type="Script" id=15]
[ext_resource path="res://Assets/Slowdex.otf" type="DynamicFontData" id=16]
[ext_resource path="res://Scenes/Level3.gd" type="Script" id=17]
[ext_resource path="res://Scenes/level.tscn" type="PackedScene" id=18]
[ext_resource path="res://Assets/Tileset/tileset (1).png" type="Texture" id=19]
[ext_resource path="res://Assets/music.png" type="Texture" id=20]
[ext_resource path="res://Utendo-Regular.ttf" type="DynamicFontData" id=21]

[sub_resource type="DynamicFont" id=2]
outline_size = 1
font_data = ExtResource( 16 )

[sub_resource type="TileSet" id=1]
0/name = "tileset (1).png 0"
0/texture = ExtResource( 19 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 16, 16 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tileset (1).png 1"
1/texture = ExtResource( 19 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tileset (1).png 2"
2/texture = ExtResource( 19 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 32, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tileset (1).png 3"
3/texture = ExtResource( 19 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 48, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 21 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 7.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 31.9852, 11.9995 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 21 )

[sub_resource type="Theme" id=9]

[sub_resource type="DynamicFont" id=8]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 21 )

[node name="Game" type="Node2D"]
script = ExtResource( 8 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 72, 39.5 )
scale = Vector2( 0.075, 0.0731482 )
texture = ExtResource( 10 )

[node name="Comandos" parent="." instance=ExtResource( 3 )]

[node name="left" parent="Comandos" index="0"]
margin_left = 50.0
margin_top = 2.0
margin_right = 78.0
margin_bottom = 30.0

[node name="right" parent="Comandos" index="1"]
margin_left = 50.0
margin_top = 34.0
margin_right = 80.0
margin_bottom = 62.0

[node name="up" parent="Comandos" index="2"]
margin_left = 80.0
margin_top = 2.0
margin_right = 110.0
margin_bottom = 30.0

[node name="down" parent="Comandos" index="3"]
margin_left = 112.0
margin_top = 2.0
margin_right = 142.0
margin_bottom = 30.0

[node name="chest" parent="Comandos" index="4"]
margin_left = 82.0
margin_top = 34.0
margin_right = 110.0
margin_bottom = 62.0
icon = ExtResource( 7 )

[node name="reset" type="Button" parent="Comandos"]
margin_left = 112.0
margin_top = 34.0
margin_right = 140.0
margin_bottom = 62.0
icon = ExtResource( 6 )

[node name="input1" type="Sprite" parent="Comandos"]
position = Vector2( 64, -48 )
scale = Vector2( 2.125, 2 )
texture = ExtResource( 5 )

[node name="input2" type="Sprite" parent="Comandos"]
position = Vector2( 96, -48 )
scale = Vector2( 2.125, 2 )
texture = ExtResource( 5 )

[node name="input3" type="Sprite" parent="Comandos"]
position = Vector2( 128, -48 )
scale = Vector2( 2.125, 2 )
texture = ExtResource( 5 )

[node name="input4" type="Sprite" parent="Comandos"]
position = Vector2( 64, -16 )
scale = Vector2( 2.125, 2 )
texture = ExtResource( 5 )

[node name="input6" type="Sprite" parent="Comandos"]
position = Vector2( 128, -16 )
scale = Vector2( 2.125, 2 )
texture = ExtResource( 5 )

[node name="input5" type="Sprite" parent="Comandos"]
position = Vector2( 96, -16 )
scale = Vector2( 2.125, 2 )
texture = ExtResource( 5 )

[node name="nivel3" parent="Comandos" instance=ExtResource( 2 )]
position = Vector2( -144, -64 )
scale = Vector2( 2, 2 )
tile_data = PoolIntArray( 0, 2, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 65536, 2, 0, 65537, 2, 0, 65538, 3, 0, 65539, 3, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 196608, 3, 0, 196609, 3, 0, 196610, 2, 0, 196611, 2, 0 )
script = ExtResource( 17 )

[node name="galinha3" parent="Comandos/nivel3" instance=ExtResource( 4 )]
position = Vector2( 24, 56 )

[node name="galinha4" parent="Comandos/nivel3" instance=ExtResource( 4 )]
position = Vector2( 24, 24 )

[node name="galinha5" parent="Comandos/nivel3" instance=ExtResource( 4 )]
position = Vector2( 8, 39 )

[node name="nivel3" type="Label" parent="Comandos/nivel3"]
margin_left = 66.0
margin_right = 125.0
margin_bottom = 24.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.941176, 0.439216, 0.266667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Level 3 "

[node name="nivel2" parent="Comandos" instance=ExtResource( 2 )]
position = Vector2( -144, -64 )
scale = Vector2( 2, 2 )
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 3, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 3, 0, 131072, 3, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 196608, 3, 0, 196609, 3, 0, 196610, 2, 0, 196611, 2, 0 )
script = ExtResource( 15 )

[node name="nivel2" type="Label" parent="Comandos/nivel2"]
margin_left = 66.0
margin_right = 125.0
margin_bottom = 24.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.941176, 0.439216, 0.266667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Level 2"

[node name="galinha" parent="Comandos/nivel2" instance=ExtResource( 4 )]
position = Vector2( 39, 24 )

[node name="galinha2" parent="Comandos/nivel2" instance=ExtResource( 4 )]
position = Vector2( 56, 56 )

[node name="nivel1" type="TileMap" parent="Comandos"]
position = Vector2( -144, -64 )
scale = Vector2( 2, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 1
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
centered_textures = true
cell_clip_uv = true
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 3, 0, 3, 3, 0, 65536, 2, 0, 65537, 2, 0, 65538, 3, 0, 65539, 3, 0, 131072, 3, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 196608, 3, 0, 196609, 3, 0, 196610, 2, 0, 196611, 2, 0 )
script = ExtResource( 14 )

[node name="nivel1" type="Label" parent="Comandos/nivel1"]
margin_left = 66.0
margin_right = 125.0
margin_bottom = 51.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.941176, 0.439216, 0.266667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Level 1
"

[node name="chicken" parent="Comandos/nivel1" instance=ExtResource( 4 )]
position = Vector2( 39, 9 )

[node name="Button" type="Button" parent="Comandos"]
margin_left = 108.0
margin_top = 80.0
margin_right = 167.0
margin_bottom = 103.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 4 )
text = "Voltar"

[node name="Collisions" type="StaticBody2D" parent="Comandos"]
position = Vector2( -142, -60 )
scale = Vector2( 2.01616, 1.98113 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Comandos/Collisions"]
position = Vector2( 30.7516, -9.08573 )
shape = SubResource( 5 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Comandos/Collisions"]
position = Vector2( 30.7518, 69.6574 )
rotation = 3.13546
shape = SubResource( 5 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Comandos/Collisions"]
position = Vector2( -11.8844, 32.2997 )
rotation = -1.57982
shape = SubResource( 6 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Comandos/Collisions"]
position = Vector2( 73.3789, 31.2898 )
rotation = 1.55918
shape = SubResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
visible = false
z_index = 1

[node name="level" parent="." instance=ExtResource( 18 )]
margin_left = 1.0
margin_right = 1.0

[node name="Menu" parent="." instance=ExtResource( 9 )]
margin_left = 1.0
margin_top = 0.0
margin_right = 145.0
margin_bottom = 80.0

[node name="MenuPanel" type="Sprite" parent="Menu/VBoxContainer" index="0"]
position = Vector2( 47, 48 )
scale = Vector2( 0.453125, 0.222222 )
texture = ExtResource( 11 )

[node name="Label" parent="Menu/VBoxContainer" index="1"]
margin_right = 96.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.858824, 0.662745, 0.454902, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )

[node name="Iniciar" parent="Menu/VBoxContainer" index="2"]
margin_top = 28.0
margin_right = 96.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 7 )

[node name="Sobre" parent="Menu/VBoxContainer" index="3"]
margin_top = 55.0
margin_right = 96.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 7 )

[node name="Sair" parent="Menu/VBoxContainer" index="4"]
margin_top = 82.0
margin_right = 96.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 7 )

[node name="Mute" type="Button" parent="."]
margin_left = 2.0
margin_top = 71.0
margin_right = 526.0
margin_bottom = 589.0
rect_scale = Vector2( 0.01, 0.01 )
icon = ExtResource( 20 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 41.0
margin_top = 37.0
margin_right = 162.0
margin_bottom = 57.0
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 9 )
custom_fonts/title_font = SubResource( 8 )
popup_exclusive = true
window_title = "Você conseguiu!"
__meta__ = {
"_editor_description_": ""
}

[node name="falha" type="WindowDialog" parent="."]
visible = true
margin_left = 41.0
margin_top = 37.0
margin_right = 162.0
margin_bottom = 57.0
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 9 )
custom_fonts/title_font = SubResource( 8 )
popup_exclusive = true
window_title = "Você falhou, tente novamente!"
__meta__ = {
"_editor_description_": ""
}

[node name="audio" parent="." instance=ExtResource( 13 )]

[connection signal="pressed" from="Comandos/left" to="Player" method="_on_left_pressed"]
[connection signal="pressed" from="Comandos/right" to="Player" method="_on_right_pressed"]
[connection signal="pressed" from="Comandos/up" to="Player" method="_on_up_pressed"]
[connection signal="pressed" from="Comandos/down" to="Player" method="_on_down_pressed"]
[connection signal="pressed" from="Comandos/chest" to="Comandos" method="_on_chest_pressed"]
[connection signal="pressed" from="Comandos/chest" to="Player" method="_on_run_pressed"]
[connection signal="pressed" from="Comandos/reset" to="Comandos" method="_on_reset_pressed"]
[connection signal="area_entered" from="Comandos/nivel3/galinha3" to="Comandos" method="_on_galinha3_area_entered"]
[connection signal="area_entered" from="Comandos/nivel3/galinha3" to="Comandos/nivel3" method="_on_galinha3_area_entered"]
[connection signal="area_entered" from="Comandos/nivel3/galinha4" to="Comandos" method="_on_galinha4_area_entered"]
[connection signal="area_entered" from="Comandos/nivel3/galinha5" to="Comandos" method="_on_galinha5_area_entered"]
[connection signal="area_entered" from="Comandos/nivel2/galinha" to="Comandos" method="_on_galinha_area_entered"]
[connection signal="area_entered" from="Comandos/nivel2/galinha" to="Comandos/nivel2" method="_on_galinha_area_entered"]
[connection signal="area_entered" from="Comandos/nivel2/galinha2" to="Comandos" method="_on_galinha2_area_entered"]
[connection signal="area_entered" from="Comandos/nivel2/galinha2" to="Comandos/nivel2" method="_on_galinha2_area_entered"]
[connection signal="area_entered" from="Comandos/nivel1/chicken" to="Comandos" method="_on_chicken_area_entered"]
[connection signal="area_entered" from="Comandos/nivel1/chicken" to="Comandos/nivel1" method="_on_chicken_area_entered"]
[connection signal="button_down" from="Comandos/Button" to="Comandos" method="_on_Button_button_down"]
[connection signal="button_down" from="Menu/VBoxContainer/Sobre" to="Menu" method="_on_Sobre_button_down"]
[connection signal="button_down" from="Menu/VBoxContainer/Sair" to="Menu" method="_on_Sair_button_down"]
[connection signal="button_down" from="Mute" to="Comandos" method="_on_Mute_button_down"]

[editable path="Comandos"]
[editable path="Menu"]
